Included tags in swagger doc
